Create basic structure within files, create page menu

--- a/fri.html
+++ b/fri.html
@@ -22,13 +22,8 @@
             || <a href="order.html">Purchase List ||</a>              
         </p>
 
-        <h2>The Rules</h2>
-        <ul>
-            <li>Each day, pick <em>one</em> meal and one side.</li>
-            <li>Each day has an option of a Devin meal, or a Caitlin meal.</li>
-            <li>Follow the recipe.  A side is optional.</li>
-            <li>You may choose to eat out <em>once</em> a week.</li>
-        </ul>
+        <h2>Friday</h2>
+      
 
     </body>
 </html>
