--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
         <h2>The Rules</h2>
         <ul>
-            <li>Each day, pick <em>one</em> meal and one side.</li>
+            <li>Each day, pick <em>one</em> meal and one side (side optional).</li>
             <li>Each day has an option of a Devin meal, or a Caitlin meal.</li>
-            <li>Follow the recipe.  A side is optional.</li>
+            <li>The days are spread out so that "easy cook" and "active cook" days are alternating.</li>
             <li>You may choose to eat out <em>once</em> a week.</li>
+            <li>Other meals should consist of snacks or leftovers.</li>
         </ul>
 
     </body>
