--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li>The days are spread out so that "easy cook" and "active cook" days are alternating.</li>
             <li>You may choose to eat out <em>once</em> a week.</li>
             <li>Other meals should consist of snacks or leftovers.</li>
+            <li>No soda.</li>
         </ul>
 
     </body>
