--- a/fri.html
+++ b/fri.html
@@ -22,7 +22,7 @@
             || <a href="order.html">Purchase List ||</a>              
         </p>
 
-        <h2>Friday</h2>
+        <h2>Friday - Easy Cook Day</h2>
       
 
     </body>
