--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>909 Meal Plan</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body style="background-color:#EFEFEF;color:#615e5e">
+    <body>
         <h1><u>909 Meal Plan</u></h1>
 
-        <!--Main Menu-->
-        <p style="background-color:tomato;color:#EFEFEF">
+        <!--Main Page Menu-->
+        <p class="page-menu">
             | <a href="index.html">Home</a>
-            | <a href="mon.html">Mon</a>
-            | <a href="tue.html">Tue</a>
-            | <a href="wed.html">Wed</a>
-            | <a href="thu.html">Thu</a>
-            | <a href="fri.html">Fri</a>
-            | <a href="sat.html">Sat</a>
-            | <a href="sun.html">Sun</a>
-            || <a href="sides.html">Sides</a>
-            || <a href="order.html">Purchase List ||</a>              
+            | <a href="pages/mon.html">Mon</a>
+            | <a href="pages/tue.html">Tue</a>
+            | <a href="pages/wed.html">Wed</a>
+            | <a href="pages/thu.html">Thu</a>
+            | <a href="pages/fri.html">Fri</a>
+            | <a href="pages/sat.html">Sat</a>
+            | <a href="pages/sun.html">Sun</a>
+            || <a href="pages/sides.html">Sides</a>
+            || <a href="pages/order.html">Purchase Guide</a> ||         
         </p>
 
         <h2>The Rules</h2>
