--- a/pages/sun.html
+++ b/pages/sun.html
@@ -2,15 +2,17 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>909 Meal Plan</title>
+        <title>Sunday</title>
+        <link rel="stylesheet" href="../style.css">
+
     </head>
 
-    <body style="background-color:#EFEFEF;color:#615e5e">
+    <body>
         <h1><u>909 Meal Plan</u></h1>
 
-        <!--Main Menu-->
-        <p style="background-color:tomato;color:#EFEFEF">
-            | <a href="index.html">Home</a>
+        <!--Main Page Menu-->
+        <p class="page-menu">
+            | <a href="../index.html">Home</a>
             | <a href="mon.html">Mon</a>
             | <a href="tue.html">Tue</a>
             | <a href="wed.html">Wed</a>
@@ -19,10 +21,10 @@
             | <a href="sat.html">Sat</a>
             | <a href="sun.html">Sun</a>
             || <a href="sides.html">Sides</a>
-            || <a href="order.html">Purchase List ||</a>              
+            || <a href="order.html">Purchase Guide</a> ||         
         </p>
 
-        <h2>Tuesday</h2>
+        <h2>Sunday</h2>
       
 
     </body>
