Add content to pages

--- a/pages/fri.html
+++ b/pages/fri.html
@@ -25,6 +25,31 @@
         </p>
 
         <h2>Friday</h2>
+        <h3>Chicken/Sausage Fried Rice</h3>
+        <img class="food_image" src="../images/sausagefriedrice.jpg">
+        <p></p>
+        <h3><u>Ingredients</u></h3>
+        <ul>
+            <li>1/2 Smoked Sausage</li>
+            <li>1 Chicken Breast</li>
+            <li>3 Eggs</li>
+            <li>Red Bell Pepper</li>
+            <li>Peas</li>
+            <li>Rice</li>
+            <li>Soy Sauce</li>
+            <li>Pepper</li>
+            <li>Vegetable Oil</li>
+        </ul>
+        <p></p>
+        <h3><u>Instructions</u></h3>
+        <ol>
+            <li>Fry sausage in coins with oil, set aside</li>
+            <li>Chop chicken into bites, fry with oil, set aside</li>
+            <li>Scramble 3 eggs on medium, chop up, set aside</li>
+            <li>Add 2-3 tbsp of oil, cook peas and peppers on medium</li>
+            <li>Add rice and soy sauce, stir evenly</li>
+            <li>Stir in sausage, chicken, and eggs.</li>
+        </ol>
       
 
     </body>
