--- a/pages/mon.html
+++ b/pages/mon.html
@@ -25,6 +25,33 @@
         </p>
 
         <h2>Monday</h2>
+
+        <h3><u>Beef Assistant</u></h3>
+        <img class="food_image" src="../images/beefassistant.jpg">
+            <p></p>
+        <h3><u>Ingredients</u></h3>
+        <p><i>Multiply by 2 for extra.</i></p>
+        <ul>
+            <li>Beef Assistant Box</li>
+            <li>2 Cups of Milk</li>
+            <li>1 Cup of Water</li>
+            <li>1 lb Beef</li>
+        </ul>
+
+    <p></p>
+        <h3><u>Instructions</u></h3>
+        <ol>
+            <li>Brown and separate the beef in a pan on HIGH.</li>
+            <li>Remove beef from pan, drain grease.</li>
+            <li>Add browned beef back to pan.</li>
+            <li>Add 2 Cups Milk, 1 Cup Water</li>
+            <li>Add flavor packet, pasta</li>
+            <li>Stir together.</li>
+            <li>Bring to a boil.</li>
+            <li>Bring down to a simmer.</li>
+            <li>Put lid on pan, cook for ~18 minutes.</li>
+
+        </ol>
       
 
     </body>
