--- a/pages/sun.html
+++ b/pages/sun.html
@@ -25,7 +25,30 @@
         </p>
 
         <h2>Sunday</h2>
-      
+        <h3>Fried Chicken Bites</h3>
+        <img class="food_image" src="../images/chickenbites.jpg">
+        <p></p>
+        <h3><u>Ingredients</u></h3>
+        <ul>
+            <li>2 Chicken Breasts</li>
+            <li>Paprika</li>
+            <li>Onion Powder</li>
+            <li>Garlic Powder</li>
+            <li>Ranch Seasoning</li>
+            <li>Olive Oil</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+        </ul>
+        <p></p>
+        <h3><u>Instructions</u></h3>
+        <ol>
+            <li>Thaw chicken breast</li>
+            <li>Cut chicken into bites</li>
+            <li>Create mix seasonings in bowl</li>
+            <li>Massage seasonings into each bite</li>
+            <li>Fry in air fryer for 15 minutes.</li>
+            <li>Eat.</li>
+        </ol>
 
     </body>
 </html>
