--- a/pages/thu.html
+++ b/pages/thu.html
@@ -25,6 +25,34 @@
         </p>
 
         <h2>Thursday</h2>
+        <h3><u>Air Fryer Hamburgers</u></h3>
+        <img class="food_image" src="../images/hamburger.jpg">
+        <p></p>
+
+        <h3><u>Ingredients</u></h3>
+        <ul>
+            <li>Raw hamburger patties</li>
+            <li>Paprika</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Garlic Powder</li>
+            <li>Onion Powder</li>
+            <li>Buns</li>
+            <li>Pickles</li>
+            <li>Ketchup</li>
+            <li>Cheese</li>
+            <li>Mayo</li>
+        </ul>
+
+        <h3><u>Instructions</u></h3>
+        <ol>
+            <li>Thaw patties</li>
+            <li>Season patties</li>
+            <li>Place in air fryer</li>
+            <li>Fry for 15 minutes, flip halfway.</li>
+            <li>Put on bun with ketchup, and eat.</li>
+        </ol>
+        
       
 
     </body>
