--- a/pages/tue.html
+++ b/pages/tue.html
@@ -25,6 +25,23 @@
         </p>
 
         <h2>Tuesday</h2>
+        <h3><u>Oven Pizza</u></h3>
+        <img class="food_image" src="../images/tonyspizza.jpg">
+        <p></p>
+        <h3><u>Ingredients</u></h3>
+        <ul>
+            <li>Frozen oven pizza</li>
+            <li>(Optional) Parmesan Cheese</li>
+        </ul>
+        <h3><u>Instructions</u></h3>
+        <ol>
+            <li>Remove from package.</li>
+            <li>Preheat oven to 400 F.</li>
+            <li>Add optional cheese to pizza.</li>
+            <li>Throw it into the oven.</li>
+            <li>Wait 18 minutes.</li>
+            <li>Pull it out.  Eat it.</li>
+        </ol>
       
 
     </body>
