--- a/pages/wed.html
+++ b/pages/wed.html
@@ -25,7 +25,36 @@
         </p>
 
         <h2>Wednesday</h2>
-      
+        <p></p>
+        <h3><u>Buffalo Wings</u></h3>
+        <img class="food_image" src="../images/buffalowings.jpg">
+        <p></p>
+
+        <h3><u>Ingredients</u></h3>
+
+        <ul>
+            <li>Raw chicken wings</li>
+            <li>Olive oil</li>
+            <li>Paprika</li>
+            <li>Ranch seasoning</li>
+            <li>Garlic powder</li>
+            <li>Onion powder</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Buffalo Sauce</li>
+        </ul>
+
+        <p></p>
+        <h3><u>Instructions</u></h3>
+        <ol>
+            <li>Thaw wings</li>
+            <li>Slather wings with olive oil</li>
+            <li>Season with paprika, ranch seasoning, garlic powder, onion powder, salt, and pepper.</li>
+            <li>Put wings in air fryer</li>
+            <li>Fry until cooked through. About 20 minutes.</li>
+            <li>Remove from fryer, toss wings in buffalo sauce.</li>
+            <li>Eat!</li>
+        </ol>
 
     </body>
 </html>
